Adds new object

--- a/index.html
+++ b/index.html
@@ -1,68 +1,16 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Treehouse Logo in three.js</title>
+  <title>Hackpack 3D Protyping</title>
   <meta charset="utf-8">
 </head>
 <body style="margin: 0;">
 
+  <div id="logo"/>
+  <div id="hackpack"/>
+
   <script src="js/three.min.js"></script>
   <script src="js/OrbitControls.js"></script>
-
-  <script>
-    var scene, camera, renderer;
-
-    init();
-    animate();
-
-    function init() {
-      scene = new THREE.Scene();
-
-      renderer = new THREE.WebGLRenderer({ antialias: true });
-
-      var WIDTH = window.innerWidth,
-          HEIGHT = window.innerHeight;
-
-      renderer.setSize(WIDTH, HEIGHT);
-
-      document.body.appendChild(renderer.domElement);
-
-      camera = new THREE.PerspectiveCamera(45, WIDTH / HEIGHT, 0.1, 20000);
-      camera.position.set(0, 6, 0);
-      scene.add(camera);
-
-      window.addEventListener('resize', function() {
-        var WIDTH = window.innerWidth,
-            HEIGHT = window.innerHeight;
-
-        renderer.setSize(WIDTH, HEIGHT);
-        camera.aspect = WIDTH / HEIGHT;
-
-        camera.updateProjectionMatrix();
-      });
-
-      // renderer.setClearColorHex(0x333F47, 1);
-      renderer.setClearColor(0x333F47, 1);
-
-      var light = new THREE.PointLight(0xffffff);
-      light.position.set(-100, 200, 100);
-      scene.add(light);
-
-      var loader = new THREE.JSONLoader();
-      loader.load( "models/owl_mesh.js", function(geometry) {
-        var material = new THREE.MeshLambertMaterial({ color: 0x55B663 });
-        mesh = new THREE.Mesh(geometry, material);
-        scene.add(mesh);
-      });
-
-      controls = new THREE.OrbitControls(camera, renderer.domElement);
-    }
-    
-    function animate() {
-      requestAnimationFrame(animate);
-      renderer.render(scene, camera);
-      controls.update();
-    }
-
-  </script>
+  <script src="public/js/logo.js"></script>
+  <script src="public/js/hackpack.js"></script>
 </body>
